--- a/css/style.css
+++ b/css/style.css
@@ -2,44 +2,38 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
   background-image: linear-gradient(120deg, #e2c35d, #d88771);
   color: #fff;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   min-height: 100vh;
 }
 
-header, form, .todo-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.todo-container, form, header {
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
-form input, form button {
+form button, form input {
   padding: 8px;
-  font-size: 32px;
+  font-size: 26px;
   border: none;
   background-color: #fff;
   outline: none;
 }
 
-.todo-container .todo-list .task .delete-btn, .todo-container .todo-list .task .complete-btn {
+.todo-container .todo-list .task .complete-btn, .todo-container .todo-list .task .delete-btn {
   color: #fff;
   border: none;
   cursor: pointer;
-  padding: 15px;
+  padding: 10px 15px;
   font-size: 18px;
   outline: none;
+  transition: all 0.5s ease;
 }
 
 .completed {
@@ -48,8 +42,7 @@ form input, form button {
 }
 
 .fall {
-  -webkit-transform: translateY(128px) rotateZ(20deg);
-          transform: translateY(128px) rotateZ(20deg);
+  transform: translateY(128px) rotateZ(20deg);
   opacity: 0;
 }
 
@@ -57,7 +50,6 @@ form input, form button {
 header {
   min-height: 20vh;
 }
-
 header h4 {
   font-size: 32px;
 }
@@ -65,25 +57,24 @@ header h4 {
 form {
   min-height: 20vh;
 }
-
+form input {
+  border-radius: 8px 0 0 8px;
+}
 form button {
   color: #d88771;
   background-color: #fff;
   cursor: pointer;
-  -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  border-radius: 0 8px 8px 0;
 }
-
 form button:hover {
   background-color: #d88771;
   color: #fff;
 }
-
 form .select {
   margin: 16px;
   position: relative;
 }
-
 form .select::after {
   font-family: fontAwesome;
   content: "\f078";
@@ -93,8 +84,8 @@ form .select::after {
   background-color: #ff6f47;
   padding: 12px;
   pointer-events: none;
+  border-radius: 0 7px 7px 0;
 }
-
 form .select select {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -105,46 +96,43 @@ form .select select {
   width: 160px;
   cursor: pointer;
   padding: 12px;
+  border-radius: 7px;
 }
 
 .todo-container .todo-list {
   list-style: none;
   min-width: 30%;
 }
-
 .todo-container .todo-list .task {
   margin: 8px;
-  font-size: 24px;
+  font-size: 22px;
   background-color: #fff;
   color: #000;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transition: all 1s ease;
+  justify-content: space-between;
+  align-items: center;
   transition: all 1s ease;
+  border-radius: 8px;
 }
-
 .todo-container .todo-list .task .task-item {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
   padding: 0 8px;
 }
-
 .todo-container .todo-list .task .delete-btn {
   background-color: #ff6f47;
 }
-
+.todo-container .todo-list .task .delete-btn:hover {
+  color: #ff6f47;
+  background-color: #fff;
+}
 .todo-container .todo-list .task .complete-btn {
   background-color: #23ce23;
+  border-radius: 0 8px 8px 0;
 }
-
+.todo-container .todo-list .task .complete-btn:hover {
+  color: #23ce23;
+  background-color: #fff;
+}
 .todo-container .todo-list .task i {
   pointer-events: none;
 }
@@ -154,14 +142,11 @@ form .select select {
   margin: auto;
   text-align: center;
 }
-
 .box .c {
   cursor: pointer;
 }
-
 .box .z {
   color: blueviolet;
   display: none;
   font-size: 50px;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
