--- a/css/style.scss
+++ b/css/style.scss
@@ -1,163 +1,175 @@
 /* Start Global */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background-image: linear-gradient(120deg, #e2c35d, #d88771);
-    color: #fff;
-    font-family: 'Poppins', sans-serif;
-    min-height: 100vh;
+  background-image: linear-gradient(120deg, #e2c35d, #d88771);
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  min-height: 100vh;
 }
 
-%custom-style {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+%center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 %input-style {
-    padding: 8px;
-    font-size: 32px;
-    border: none;
-    background-color: #fff;
-    outline: none;
+  padding: 8px;
+  font-size: 26px;
+  border: none;
+  background-color: #fff;
+  outline: none;
 }
 
 %task-btn-style {
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    padding: 15px;
-    font-size: 18px;
-    outline: none;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  padding: 10px 15px;
+  font-size: 18px;
+  outline: none;
+  transition: all 0.5s ease;
 }
 
-// belongs to app.js file 
+// belongs to app.js file
 .completed {
-    text-decoration: line-through;
-    opacity: 0.5;
+  text-decoration: line-through;
+  opacity: 0.5;
 }
 
 .fall {
-    transform: translateY(128px) rotateZ(20deg);
-    opacity: 0;
+  transform: translateY(128px) rotateZ(20deg);
+  opacity: 0;
 }
 /* End Global */
 
 header {
-    @extend %custom-style;
-    min-height: 20vh;
+  @extend %center;
+  min-height: 20vh;
 
-    h4 {
-        font-size: 32px;
-    }
+  h4 {
+    font-size: 32px;
+  }
 }
 
 form {
-    @extend %custom-style;
-    min-height: 20vh;
+  @extend %center;
+  min-height: 20vh;
 
-    input {
-        @extend %input-style;
+  input {
+    @extend %input-style;
+    border-radius: 8px 0 0 8px;
+  }
+
+  button {
+    @extend %input-style;
+    color: #d88771;
+    background-color: #fff;
+    cursor: pointer;
+    transition: all 0.5s ease;
+    border-radius: 0 8px 8px 0;
+
+    &:hover {
+      background-color: #d88771;
+      color: #fff;
+    }
+  }
+
+  .select {
+    margin: 16px;
+    position: relative;
+
+    &::after {
+      font-family: fontAwesome;
+      content: "\f078";
+      position: absolute;
+      top: 0;
+      right: 0;
+      background-color: #ff6f47;
+      padding: 12px;
+      pointer-events: none;
+      border-radius: 0 7px 7px 0;
     }
 
-    button {
-        @extend %input-style;
-        color: #d88771;
-        background-color: #fff;
-        cursor: pointer;
-        transition: all 0.5s ease;
-
-        &:hover {
-            background-color: #d88771;
-            color: #fff;
-        }
+    select {
+      appearance: none;
+      outline: none;
+      border: none;
+      color: #ff6f47;
+      width: 160px;
+      cursor: pointer;
+      padding: 12px;
+      border-radius: 7px;
     }
-
-    .select {
-        margin: 16px;
-        position: relative;
-
-        &::after {
-            font-family: fontAwesome;
-            content: "\f078";
-            position: absolute;
-            top: 0;
-            right: 0;
-            background-color: #ff6f47;
-            padding: 12px;
-            pointer-events: none;
-        }
-
-        select {
-            appearance: none;
-            outline: none;
-            border: none;
-            color: #ff6f47;
-            width: 160px;
-            cursor: pointer;
-            padding: 12px;
-
-        }
-    }
+  }
 }
 
 .todo-container {
-    @extend %custom-style;
+  @extend %center;
 
-    .todo-list {
-        list-style: none;
-        min-width: 30%;
+  .todo-list {
+    list-style: none;
+    min-width: 30%;
 
-        .task {
-            margin: 8px;
-            font-size: 24px;
-            background-color: #fff;
-            color: #000;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            transition: all 1s ease;
+    .task {
+      margin: 8px;
+      font-size: 22px;
+      background-color: #fff;
+      color: #000;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      transition: all 1s ease;
+      border-radius: 8px;
 
-            .task-item {
-                flex: 1;
-                padding: 0 8px;
-            }
+      .task-item {
+        flex: 1;
+        padding: 0 8px;
+      }
 
-            .delete-btn {
-                @extend %task-btn-style;
-                background-color: #ff6f47;
+      .delete-btn {
+        @extend %task-btn-style;
+        background-color: #ff6f47;
 
-            }
-
-            .complete-btn {
-                @extend %task-btn-style;
-                background-color: #23ce23;
-
-            }
-
-            i {
-                pointer-events: none;
-            }
-
+        &:hover {
+          color: #ff6f47;
+          background-color: #fff;
         }
+      }
+
+      .complete-btn {
+        @extend %task-btn-style;
+        background-color: #23ce23;
+        border-radius: 0 8px 8px 0;
+
+        &:hover {
+          color: #23ce23;
+          background-color: #fff;
+        }
+      }
+
+      i {
+        pointer-events: none;
+      }
     }
+  }
 }
 
-
 .box {
-    width: 500px;
-    margin: auto;
-    text-align: center;
-    .c {
-        cursor: pointer;
-    }
-    .z {
-        color: blueviolet;
-        display: none;
-        font-size: 50px;
-    }
+  width: 500px;
+  margin: auto;
+  text-align: center;
+  .c {
+    cursor: pointer;
+  }
+  .z {
+    color: blueviolet;
+    display: none;
+    font-size: 50px;
+  }
 }
